# 3D-LiDAR-Object-Detection

./: 18epoch  CMakeLists.txt  README.md  package.xml
launch/: dbscan.launch.py  lidar_detector.launch  lidar_detector.launch.py  pedestrian_detection.launch.py
rviz/: test.rviz
scripts/: base_demo.json  camera_class.py  object_detection.py  object_detetion.py  pedestrian_detection.py  postprocess.py
scripts/core/: train_agent.py
scripts/core/datasets/: ._dataset.py  tempCodeRunnerFile.py
scripts/core/datasets/utils_1/: to_torchscript.py
scripts/core/losses/: loss_fn.py
scripts/core/models/: model.py
scripts/core/models/backbones/: rpn.py
scripts/core/models/torchscript/: torchscript_model.py
src/: detector.cpp  ransac.cpp
