<?xml version="1.0"?>
<package format="2">
  <name>lidar_detection</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="swooeun@kmu.kr">swooeun</maintainer>
  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>TODO</license>
  
  <!-- buildtool_depend for build tool packages -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Dependencies for build, build export, and exec -->
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
